--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,10 +1,12 @@
+/** @format */
+
 // font color & style
 $firstColor: #000;
 $secondColor: #fff;
 $thirdColor: #cc0000;
 
-$Montserrat: "Montserrat";
-$Comfortaa: "Comfortaa";
+$Montserrat: 'Montserrat';
+$Comfortaa: 'Comfortaa';
 // breakpoints
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 576px;
@@ -14,3 +16,15 @@ $screen-md-min: 828px;
 $screen-lg-min: 992px;
 // Large tablets and desktops
 $screen-xl-min: 1200px;
+
+// styling scrollbar
+::-webkit-scrollbar {
+	width: 8px;
+}
+::-webkit-scrollbar-thumb {
+	background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	border-radius: 10px;
+}
